# remcu-chip-sdks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md.txt  linux_x64.cmake  macos.cmake
NXP/LPC_17XX_40XX/CMakeLists/LPC175X_6X/: CMakeLists.txt  Makefile  conf.cpp  defines_LPC175X_6X.h
SiLabs/Gecko_SDK/CMakeLists/EFM32TG840F32/: CMakeLists.txt  Makefile  conf.cpp  defines_EFM32TG840F32.h
freescale/KSDK_1.3/CMakeLists/MK64FN1M0VMD12/: CMakeLists.txt  Makefile  conf.cpp  defines_MK64FN1M0VMD12.h
nordicsemi/nRF5_SDK_12.3.0_d7731ad/NRF51422/: CMakeLists.txt  Makefile  conf.cpp  defines_nRF51422.h
nordicsemi/nRF5_SDK_12.3.0_d7731ad/NRF51422/test/: CMakeLists.txt  main.c
stm32/: CMakeLists.txt  export_wrap.sh
stm32/stm32f0/: CMakeLists.txt
stm32/stm32f0/STM32F0xx_StdPeriph_Lib_V1.5.0/CMakeLists/: CMakeLists.txt  Makefile  stm32f0.cmake
stm32/stm32f10X/: CMakeLists.txt
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/: CMakeLists.txt  Makefile  defines_STM32F10X_MD.h  parse_args.cmake
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/CMakeLists/: Makefile  conf.cpp  stm32f10x.cmake
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/test/: CMakeLists.txt
stm32/stm32f10X/stm32f10X_general/: Makefile
stm32/stm32f10X/stm32f10X_general/cmsis/: core_cm3.c1.c  core_cm3.h  stm32f10x_conf.h  system_stm32f10x.c
stm32/stm32f10X/stm32f10X_general/src/: main.c
stm32/stm32f2/: CMakeLists.txt
stm32/stm32f2/STM32F2xx_StdPeriph_Lib_V1.1.0/: CMakeLists.txt  Makefile  STM32F2XX_StdPeriph_Lib.py  conf.cpp  defines_STM32F2XX.h
stm32/stm32f2/STM32F2xx_StdPeriph_Lib_V1.1.0/test/: CMakeLists.txt
stm32/stm32f3/: CMakeLists.txt
stm32/stm32f3/STM32F3-Discovery_FW_V1.1.0/: CMakeLists.txt  Makefile  STM32F30X_StdPeriph_Lib.py  conf.cpp  defines_STM32F30X.h
stm32/stm32f3/STM32F3-Discovery_FW_V1.1.0/test/: CMakeLists.txt
stm32/stm32f3/STM32F30x_DSP_StdPeriph_Lib_V1.2.3/: CMakeLists.txt
stm32/stm32f3/STM32F30x_DSP_StdPeriph_Lib_V1.2.3/STM32F334x8/: CMakeLists.txt  Makefile  STM32F334x8_StdPeriph_Lib.py  conf.cpp
stm32/stm32f4xx/: CMakeLists.txt  Makefile
stm32/stm32f4xx/STM32F4-Discovery_FW_V1.1.0/: .gitignore  2py.sh  CMakeLists.txt  Makefile  REMCU_STM32F4_DISCOVERY.py  STM32F4XX_StdPeriph_Lib.py  STM32F4XX_StdPeriph_Lib_V1_1_0.py  STM32F4_DISCOVERY.py  conf.cpp  defines_STM32F4XX.h
stm32/stm32f4xx/STM32F4-Discovery_FW_V1.1.0/test/: CMakeLists.txt
stm32/stm32f4xx/STM32F4-Discovery_FW_V1.1.0/x86_64/: IrTest.cpp.remcu.c  stm32f4xx_adc.c.remcu.c  stm32f4xx_can.c.remcu.c  stm32f4xx_crc.c.remcu.c  stm32f4xx_cryp.c.remcu.c  stm32f4xx_dac.c.remcu.c  stm32f4xx_dbgmcu.c.remcu.c  stm32f4xx_dcmi.c.remcu.c  stm32f4xx_dma.c.remcu.c  stm32f4xx_exti.c.remcu.c  stm32f4xx_flash.c.remcu.c  stm32f4xx_fsmc.c.remcu.c  stm32f4xx_gpio.c.remcu.c  stm32f4xx_hash.c.remcu.c.error  stm32f4xx_i2c.c.remcu.c  stm32f4xx_iwdg.c.remcu.c  stm32f4xx_rcc.c.remcu.c  stm32f4xx_rng.c.remcu.c  stm32f4xx_rtc.c.remcu.c  stm32f4xx_sdio.c.remcu.c  stm32f4xx_spi.c.remcu.c  stm32f4xx_syscfg.c.remcu.c  stm32f4xx_tim.c.remcu.c  stm32f4xx_usart.c.remcu.c  stm32f4xx_wwdg.c.remcu.c  system_stm32f4xx.c.remcu.c
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/: CMakeLists.txt  Makefile  stm32f4xx.cmake
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F401xx/: CMakeLists.txt  STM32F401xx_StdPeriph_Lib.py  conf.cpp  defines_STM32F401xx.h
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F410xx/: CMakeLists.txt  STM32F410xx_StdPeriph_Lib.py
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F411xE/: CMakeLists.txt  STM32F411xE_StdPeriph_Lib.py
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F412xG/: CMakeLists.txt  Makefile  STM32F412xG_StdPeriph_Lib.py  defines.h.in
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F413_423xx/: CMakeLists.txt  STM32F413_423xx_StdPeriph_Lib.py
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F427_437xx/: CMakeLists.txt  STM32F427_437xx_StdPeriph_Lib.py
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F429_439xx/: CMakeLists.txt  STM32F429_439xx_StdPeriph_Lib.py
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F446xx/: CMakeLists.txt  STM32F446xx_StdPeriph_Lib.py
stm32/stm32f4xx/STM32F4xx_DSP_StdPeriph_Lib_V1.8.0/STM32F469_479xx/: CMakeLists.txt  STM32F469_479xx_StdPeriph_Lib.py
stm32/stm32f7/: CMakeLists.txt
stm32/stm32f7/STM32CubeF7/: Makefile  stm32f7.cmake
stm32/stm32f7/STM32CubeF7/Drivers/: CMakeLists.txt  Makefile  conf.cpp  defines_STM32F767xx.h  dirty.mk  test.c
stm32/stm32f7/STM32CubeF7/LL_STM32F722xx/: 2py.sh  CMakeLists.txt  (+1 more)
stm32/stm32h7/: CMakeLists.txt  Makefile  stm32h7.cmake
stm32/stm32h7/LL_STM32H742/: CMakeLists.txt  STM32H742xx_LowLayer_HAL_drivers.py  stm32h7xx_hal_conf.h
stm32/stm32h7/LL_STM32H743xx/: CMakeLists.txt  Makefile  STM32H743xx_LowLayer_HAL_drivers.py
stm32/stm32h7/LL_STM32H750/: CMakeLists.txt  STM32H750xx_LowLayer_HAL_drivers.py  conf.cpp
stm32/stm32h7/LL_STM32H753/: CMakeLists.txt  STM32H753xx_LowLayer_HAL_drivers.py  dirty.mk
stm32/stm32h7/test/: CMakeLists.txt  clock.c
stm32/stm32l0/: CMakeLists.txt  Makefile  STM32L011xx_LowLayer_HAL_drivers.py  STM32L031xx_LowLayer_HAL_drivers.py  STM32L041xx_HAL_LL_drivers.py  STM32L063xx_HAL_LL_drivers.py  STM32L073xx_HAL_LL_drivers.py  conf.cpp  stm32l0.cmake  stm32l0xx_hal_conf.h
stm32/stm32l0/HALL_LL_STM32L011/: CMakeLists.txt
stm32/stm32l0/HALL_LL_STM32L021/: CMakeLists.txt  Makefile  STM32L021xx_LowLayer_HAL_drivers.py
stm32/stm32l0/HALL_LL_STM32L031/: CMakeLists.txt
stm32/stm32l0/HALL_LL_STM32L041/: CMakeLists.txt
stm32/stm32l0/HALL_LL_STM32L053/: CMakeLists.txt  Makefile  STM32L053xx_LowLayer_HAL_drivers.py  conf.cpp  defines.h.in
stm32/stm32l0/HALL_LL_STM32L063/: CMakeLists.txt
stm32/stm32l0/HALL_LL_STM32L073/: CMakeLists.txt
stm32/stm32l0/HALL_LL_STM32L083/: CMakeLists.txt  STM32L083xx_LowLayer_HAL_drivers.py  dirty.mk  test.c
stm32/stm32l0/test/: CMakeLists.txt  gpio.cpp
stm32/stm32l1/: CMakeLists.txt
stm32/stm32l1/STM32L1xx_StdPeriph_Lib_V1.3.1/: CMakeLists.txt
(+16630 files in other folders)
